main/default/objects/Account_Commission_Template__c/Account_Commission_Template__c.object-meta.xml
<CustomObject>
    <label>Account Commission Template</label>
    <nameField>
        <displayFormat>ACT-{0000}</displayFormat>
        <label>Account Commission Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Commission Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>