main/default/objects/Account_Commission_Template__c/fields/Cyber_Default__c.field-meta.xml
<CustomField>
    <fullName>Cyber_Default__c</fullName>
    <label>Cyber Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>