main/default/objects/Account_Commission_Template__c/fields/MPL_Default__c.field-meta.xml
<CustomField>
    <fullName>MPL_Default__c</fullName>
    <label>MPL Default</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>