main/default/objects/Account_Commission_Template__c/fields/Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>Wholesaler Broker Account</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>