main/default/objects/Account_Commission_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Wholesaler__c</columns>
    <columns>Cyber_Default__c</columns>
    <columns>MPL_Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>